line chart / about page bugs SQUASHED

--- a/fi-viz/src/pages/about/about.css
+++ b/fi-viz/src/pages/about/about.css
@@ -25,3 +25,7 @@
 .border {
     border: 1px solid rgba(169, 176, 183, .3);
 }
+
+.about-columns {
+    height: 100% ! important;
+}
